Fix CSS styles for links in collapse dropdown for responsive design

--- a/app/assets/stylesheets/style-green4.css
+++ b/app/assets/stylesheets/style-green4.css
@@ -6537,6 +6537,7 @@ a.feature-icon:hover {
 .navbar-inverse a {
   background-image: none;
 }
+
 .navbar-default.navbar-inverse .navbar-nav > li > a:hover,
 .navbar-default.navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-default.navbar-inverse .navbar-nav > .active > a {
@@ -6562,6 +6563,35 @@ a.feature-icon:hover {
   background-image: none;
   color: #fff;
 }
+
+@media (max-width: 767px) {
+ .navbar-default.navbar-inverse .navbar-nav > li > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a {
+   background-image: none;
+   color: #fff;
+ }
+ .navbar-default.navbar-inverse .navbar-nav > li > a,
+ .navbar-default.navbar-inverse .navbar-nav > li > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > li > a:focus,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a:focus {
+   color: white;
+ }
+ .navbar-default.navbar-inverse .navbar-nav > li > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > li > a:focus,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > .active > a:focus .navbar-default.navbar-inverse .navbar-nav > .open > a,
+ .navbar-default.navbar-inverse .navbar-nav > .open > a:hover,
+ .navbar-default.navbar-inverse .navbar-nav > .open > a:focus {
+   background-color: #666;
+   background-image: none;
+   color: #fff;
+ }
+}
+
 .navbar-default.navbar-inverse + .main-header {
   background-color: #f1f1f1;
   border-bottom: solid 1px #ddd;
